; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_UdpRecvForNetBiosBroadcast.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_UdpRecvForNetBiosBroadcast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UdpRecvForNetBiosBroadcast(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i8* %5, i8** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %19 = load i8*, i8** %15, align 8
  %20 = icmp eq i8* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %9
  %22 = load i32*, i32** %10, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %21, %9
  br label %54

25:                                               ; preds = %21
  %26 = load i8*, i8** %15, align 8
  %27 = load i32, i32* %16, align 4
  %28 = call i32 @IsNetbiosRegistrationPacket(i8* %26, i32 %27)
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %54

30:                                               ; preds = %25
  %31 = load i32, i32* %18, align 4
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  store i32 -1, i32* %13, align 4
  br label %34

34:                                               ; preds = %33, %30
  %35 = load i32*, i32** %10, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %13, align 4
  %39 = load i32, i32* %14, align 4
  %40 = load i8*, i8** %15, align 8
  %41 = load i32, i32* %16, align 4
  %42 = call i32 @ProcessNetBiosNameQueryPacketForMyself(i32* %35, i32 %36, i32 %37, i32 %38, i32 %39, i8* %40, i32 %41)
  %43 = icmp eq i32 %42, 0
  br i1 %43, label %44, label %53

44:                                               ; preds = %34
  %45 = load i32*, i32** %10, align 8
  %46 = load i32, i32* %11, align 4
  %47 = load i32, i32* %12, align 4
  %48 = load i32, i32* %13, align 4
  %49 = load i32, i32* %14, align 4
  %50 = load i8*, i8** %15, align 8
  %51 = load i32, i32* %16, align 4
  %52 = call i32 @UdpRecvForInternet(i32* %45, i32 %46, i32 %47, i32 %48, i32 %49, i8* %50, i32 %51, i32 0)
  br label %53

53:                                               ; preds = %44, %34
  br label %54

54:                                               ; preds = %24, %53, %25
  ret void
}

declare dso_local i32 @IsNetbiosRegistrationPacket(i8*, i32) #1

declare dso_local i32 @ProcessNetBiosNameQueryPacketForMyself(i32*, i32, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @UdpRecvForInternet(i32*, i32, i32, i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
